<resources>
    <string name="app_name">GitHubBrowserProject</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="signIn">Sign in</string>
    <string name="pleaseFillFields">Please fill the required fields!</string>
    <string name="signingIn">Signing in...</string>
    <string name="basicAuthURL">https://api.github.com/jsonUser</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="userAvatar">UserAvatar</string>
    <string name="owned">Owned</string>
    <string name="starred">Starred</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userDataBundleKey">userData</string>
    <string name="authLoginKey">login</string>
    <string name="followersKey">followers</string>
    <string name="followingKey">following</string>
    <string name="appTitle">GitHub Browser</string>
    <string name="followersTitle">"Followers:  %1$s"</string>
    <string name="followingTitle">"Following:  %1$s"</string>
    <string name="commitsTitle">"Commits:  %1$s"</string>
    <string name="branchesTitle">"Branches:  %1$s"</string>
    <string name="releasesTitle">"Releases:  %1$s"</string>
    <string name="starTitle">"Star:  %1$s"</string>
    <string name="forkTitle">"Fork:  %1$s"</string>
    <string name="contributorsTitle">"Contributors:  %1$s"</string>
    <string name="avatarURLKey">avatar_url</string>
    <string name="loadingData">Loading data...</string>
    <string name="loadingRepos">Loading repositories...</string>
    <string name="usernameKey">username</string>
    <string name="authPasswordKey">password</string>
    <string name="repoNameKey">name</string>
    <string name="starredAuthRepos">https://api.github.com/jsonUser/starred</string>
    <string name="userAgent">BojidarMT</string>
    <string name="title_activity_repository">RepositoryActivity</string>
    <string name="reposKey">repos_url</string>
    <string name="avatarURL">avatar_url</string>
    <string name="commits">/commits</string>
    <string name="branches">/branches</string>
    <string name="releases">/releases</string>
    <string name="contributors">/contributors</string>
    <string name="languages">/languages</string>
    <string name="issues">/issues</string>
    <string name="reposURL">https://api.github.com/repos/</string>
    <string name="starsCount">stargazers_count</string>
    <string name="forksCount">forks_count</string>
    <string name="userObjectKey">userObject</string>
    <string name="repoObject">repoObject</string>
    <string name="userProfileTitle">User Profile</string>
    <string name="repoTitle">Repository</string>
    <string name="starRepoItem">starRepoItem</string>
    <string name="starRepoError">Could not star a jsonRepository! Please try again later</string>
    <string name="unstarRepoError">Could not unstar a jsonRepository! Please try again later</string>
    <string name="starringRepo">Starring jsonRepository...</string>
    <string name="unstarringRepo">Unstarring jsonRepository...</string>
    <string name="checkRepoStarred">Could not check is jsonRepository starred</string>
    <string name="githubApiRootUrl">https://api.github.com/</string>
    <string name="basic">Basic</string>
    <string name="limitExceeded">API rate limit exceeded</string>
    <string name="openState">open</string>
    <string name="title_activity_user_search">userSearchActivity</string>
    <string name="userSearchTitle">User Search</string>
    <string name="userSearch">User Search</string>
    <string name="userListKey">jsonUserList</string>
    <string name="isForSearchOnly">isForSearchOnly</string>
    <string name="logout">Logout</string>
    <string name="areYouSure">Are you sure you want to logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="myProfile">My profile</string>
    <string name="openIssue">open</string>
    <string name="closeIssues">close</string>
    <string name="noInternetConnectionError">No internet connection!Please try again later!</string>
    <string name="isFromOwnedScreen">isFromOwned</string>
</resources>
