<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bojidartodorov.projects.githubbrowserproject.activities.UserProfileActivity"
    tools:showIn="@layout/activity_user_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@color/colorOrange"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/userAvatar"
                android:src="@drawable/no_photo" />

            <Button
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:gravity="center_horizontal"
                android:onClick="navigateToUserFollowersSearchScreen"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <Button
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:gravity="center_horizontal"
                android:onClick="navigateToUserFollowingSearchScreen"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repositories"
                android:textSize="19sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#c0c0c0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:onClick="ownedFragment"
                android:text="@string/owned"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0" />

            <Button
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:onClick="starredFragment"
                android:text="@string/starred"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ownedContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</ScrollView>

